--- a/css/style.css
+++ b/css/style.css
@@ -1,108 +1,3 @@
-/*
---- 01 typography system
---font-family: 'Inter', sans-serif;
--font size system(px)
-2 / 4 / 8 / 12 / 16 / 24 / 32 / 48 / 64 / 72 / 96 / 128 
-
--font weight system
-400
-
--line height system:
-default :1
-small :1.05
-paragraph :1.6
-
-
-
---- -02 color system
-- primary color: #e67e22
-- Tints :#fdf2e9
-- Shades :#cf711f :
-- Accents :
-- greys:
-#555
-#333
--- 05 Shadows
-
--- 06 Border radius
-default: 12px
--- 07 Whitespace
-spacing system(px)
-10 / 12 / 14 / 16 / 18 / 20 / 24 / 30 / 36 / 44 / 52 / 62 / 74 / 86 / 98
-
-
-*/
-@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;600;700&display=swap');
-* {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
-}
-html {
-  font-size: 62.5%;
-}
-
-body {
-  font-family: 'Rubik', sans-serif;
-  line-height: 1;
-  font-weight: 400;
-  color: #555;
-}
-/* general styles */
-li {
-  list-style: none;
-}
-a {
-  text-decoration: none;
-}
-.heading-primary {
-  font-size: 5.2rem;
-  font-weight: 700;
-  line-height: 1.1;
-  letter-spacing: -0, 5px;
-  color: #333;
-  margin-bottom: 3.2rem;
-}
-.btn:link,
-.btn:visited {
-  font-size: 2rem;
-  display: inline-block;
-  padding: 1.6rem 3.2rem;
-  border-radius: 1.5rem;
-  font-weight: 500;
-  text-decoration: none;
-  transition: all 0.3s ease-in-out;
-}
-.btn--full:link,
-.btn--full:visited {
-  background-color: #e67e22;
-  color: #fdf2e9;
-}
-.btn--full:hover,
-.btn--full:active {
-  background-color: #cf711f;
-  color: #fff;
-}
-
-.btn--outline:link,
-.btn--outline:visited {
-  background-color: #fdf2e9;
-  border: 1px solid #e67e22;
-  color: #e67e22;
-}
-.btn--outline:hover,
-.btn--outline:active {
-  color: #cf711f;
-  background-color: #fdf2e9;
-}
-.darr {
-  margin-left: 10px;
-  display: inline-block;
-}
-.mr--sm {
-  margin-right: 1.6rem;
-}
-
 /* header */
 .header {
   display: flex;
@@ -141,7 +36,7 @@ a {
   background-color: #fdf2e9;
   padding: 4.8rem 0 9.6rem 0;
 }
-.hero {
+/* .hero {
   max-width: 130rem;
   margin-left: auto;
   margin-right: auto;
@@ -150,7 +45,7 @@ a {
   grid-template-columns: repeat(2, 1fr);
   gap: 9.6rem;
   align-items: center;
-}
+} */
 
 .hero-description {
   font-size: 2rem;
@@ -188,4 +83,50 @@ a {
 .delivered-text span {
   color: #cf711f;
   font-weight: 700;
+}
+/* how it works section*/
+.section-how {
+  padding: 4.8rem 0;
+}
+.step-number {
+  font-size: 9.6rem;
+  font-weight: 600;
+  margin-bottom: 1.2rem;
+  color: #dee2e6;
+}
+.step-description {
+  font-size: 1.8rem;
+  font-weight: 400;
+  line-height: 1.4;
+  margin-bottom: 1.2rem;
+}
+.step-img-box {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  margin-bottom: 1.2rem;
+}
+.step-img-box::before,
+.step-img-box::after {
+  position: absolute;
+  content: '';
+  display: block;
+
+  border-radius: 50%;
+  filter: blur(3px);
+  z-index: -1;
+}
+.step-img-box::before {
+  width: 60%;
+  padding-bottom: 60%;
+  background-color: #fdf2e9;
+}
+.step-img-box::after {
+  width: 50%;
+  padding-bottom: 50%;
+  background-color: #f8d8bd;
+}
+.step-img {
+  width: 35%;
 }
