--- a/css/general.css
+++ b/css/general.css
@@ -63,6 +63,12 @@ body {
 .grid--2-col {
   grid-template-columns: repeat(2, 1fr);
 }
+.grid--3-col {
+  grid-template-columns: repeat(3, 1fr);
+}
+.grid--4-col {
+  grid-template-columns: repeat(4, 1fr);
+}
 .grid--center-v {
   align-items: center;
 }
