--- a/css/style.css
+++ b/css/style.css
@@ -34,7 +34,7 @@
 /* hero section*/
 .section-hero {
   background-color: #fdf2e9;
-  padding: 4.8rem 0 9.6rem 0;
+  padding: 4.8rem 0 10.6rem 0;
 }
 /* .hero {
   max-width: 130rem;
@@ -84,9 +84,39 @@
   color: #cf711f;
   font-weight: 700;
 }
+/* featured section*/
+.section-featured {
+  padding: 3.8rem 0 4rem;
+  margin-bottom: 4.8rem;
+}
+.heading-featured-in {
+  font-size: 2rem;
+  font-weight: 500;
+  text-transform: uppercase;
+  line-height: 1.1;
+  letter-spacing: 0.9;
+  margin-bottom: 2rem;
+  text-align: center;
+  color: rgb(87, 86, 86);
+}
+.logos {
+  display: flex;
+
+  justify-content: space-around;
+}
+.logos img {
+  height: 3rem;
+  filter: grayscale(100%);
+  opacity: 0.5;
+  transition: all 0.3s ease-in-out;
+}
+.logos img:hover {
+  filter: grayscale(0%);
+  opacity: 1;
+}
 /* how it works section*/
 .section-how {
-  padding: 4.8rem 0;
+  padding: 4.8rem 0 9.6rem;
 }
 .step-number {
   font-size: 9.6rem;
@@ -129,4 +159,141 @@
 }
 .step-img {
   width: 35%;
+}
+.section-meals {
+  padding: 9.6rem 0;
+}
+.meal {
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+  border-radius: 1.1rem;
+  overflow: hidden;
+  transition: all 0.3s ease-in-out;
+}
+.meal:hover {
+  transform: translateY(-0.5rem);
+}
+.meal-content {
+  padding: 4.8rem;
+}
+.meal-tags {
+  margin-bottom: 2.4rem;
+  display: flex;
+  align-items: center;
+  gap: 1.2rem;
+}
+.tag {
+  display: inline-block;
+  padding: 0.4rem 0.8rem;
+
+  border-radius: 10rem;
+  font-size: 1.2rem;
+  font-weight: 500;
+  color: #333;
+}
+.tag--vegetarian {
+  background-color: #40c057;
+}
+.tag--vegan {
+  background-color: #c0eb75;
+}
+.tag--paleo {
+  background-color: #ffe066;
+}
+.meal-title {
+  font-size: 2.4rem;
+  font-weight: 600;
+  line-height: 1.2;
+  margin-bottom: 3.2rem;
+  color: #333;
+}
+.meal-attributes {
+  display: flex;
+  flex-direction: column;
+  gap: 2.4rem;
+}
+.meal-attribute {
+  font-size: 1.8rem;
+  display: flex;
+  align-items: center;
+  gap: 1.6rem;
+}
+
+.meal-icon {
+  width: 2.4rem;
+  height: 2.4rem;
+  color: #cf711f;
+}
+
+.meal-img {
+  width: 100%;
+  transition: all 0.3s ease-in-out;
+  transform: scale(1.05);
+  filter: grayscale(30%);
+}
+.meal-img:hover {
+  transform: scale(1);
+  filter: grayscale(0%);
+}
+.diet-icon {
+  width: 3.2rem;
+  height: 3.2rem;
+  color: #cf711f;
+}
+.list-item {
+  display: flex;
+  align-items: center;
+  gap: 1.6rem;
+}
+.list-item span {
+  font-size: 1.6rem;
+  font-weight: 400;
+  color: #333;
+}
+.section-testimonials {
+  background-color: #fdf2e9;
+  display: grid;
+  grid-template-columns: 55fr 45fr;
+  align-items: center;
+}
+.testimonials {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  row-gap: 4.8rem;
+  column-gap: 6.4rem;
+}
+.testimonial-container {
+  padding: 9.6rem;
+}
+.testimonial-img {
+  width: 6.4rem;
+  border-radius: 50%;
+  margin-bottom: 1.6rem;
+}
+.testimonial-text {
+  font-size: 1.8rem;
+  line-height: 1.6;
+  margin-bottom: 1.6rem;
+  color: #6f6f6f;
+}
+.testimonial-author {
+  font-size: 1.6rem;
+  color: #6f6f6f;
+}
+.gallery {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 1.8rem;
+  padding: 1.6rem;
+}
+.gallery-item {
+  overflow: hidden;
+}
+.gallery-item img {
+  width: 100%;
+  display: block;
+  object-fit: cover;
+  transition: all 0.3s ease-in-out;
+}
+.gallery-item img:hover {
+  transform: scale(1.1);
 }
