--- a/css/general.css
+++ b/css/general.css
@@ -60,6 +60,9 @@ body {
   row-gap: 9.6rem;
   column-gap: 6.4rem;
 }
+.grid:not(:last-child) {
+  margin-bottom: 9.6rem;
+}
 .grid--2-col {
   grid-template-columns: repeat(2, 1fr);
 }
