--- a/css/general.css
+++ b/css/general.css
@@ -38,6 +38,9 @@ spacing system(px)
   margin: 0;
   box-sizing: border-box;
 }
+*:focus {
+  outline: none;
+}
 html {
   font-size: 62.5%;
 }
@@ -71,6 +74,9 @@ body {
 }
 .grid--4-col {
   grid-template-columns: repeat(4, 1fr);
+}
+.grid--5-col {
+  grid-template-columns: repeat(5, 1fr);
 }
 .grid--center-v {
   align-items: center;
@@ -115,6 +121,7 @@ a {
   margin-bottom: 1.6rem;
   letter-spacing: 0.8;
 }
+.btn,
 .btn:link,
 .btn:visited {
   font-size: 2rem;
@@ -124,6 +131,19 @@ a {
   font-weight: 500;
   text-decoration: none;
   transition: all 0.3s ease-in-out;
+  border: none;
+  cursor: pointer;
+  font-family: inherit;
+}
+.btn-form {
+  align-self: end;
+  padding: 1.2rem;
+  background-color: #fdf2e9;
+  color: #cf711f;
+}
+.btn-form:hover {
+  color: #fdf2e9;
+  background-color: #45260a;
 }
 .btn--full:link,
 .btn--full:visited {
