--- a/css/style.css
+++ b/css/style.css
@@ -442,3 +442,27 @@
   column-gap: 3.2rem;
   row-gap: 2.4rem;
 }
+.cta-form label {
+  display: block;
+  font-size: 1.6rem;
+  font-weight: 600;
+  color: #45260a;
+  margin-bottom: 1.2rem;
+}
+.cta-form input,
+.cta-form select {
+  border-radius: 12px;
+  border: none;
+  border: 1px solid #45260a;
+  padding: 1.2rem;
+  width: 100%;
+  font-size: 1.6rem;
+  background-color: #fdf2e9;
+  color: inherit;
+  box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.1);
+  margin-bottom: 1.2rem;
+  font-family: inherit;
+}
+.cta-form input::placeholder {
+  color: #45260a6a;
+}
