--- a/css/style.css
+++ b/css/style.css
@@ -466,3 +466,61 @@
 .cta-form input::placeholder {
   color: #45260a6a;
 }
+.footer {
+  padding: 9.6rem 0;
+  background: #130d06;
+}
+.footer-heading {
+  font-size: 1.8rem;
+  font-weight: 600;
+  margin-bottom: 2.4rem;
+  color: #b1b1b1;
+}
+.footer-nav li {
+  margin-bottom: 1.6rem;
+  font-size: 1.2rem;
+}
+.footer-link:link,
+.footer-link:visited {
+  display: inline-block;
+  margin-bottom: 0.5rem;
+  text-decoration: none;
+  color: #b1b1b1;
+  transition: all 0.3s ease-in-out;
+}
+.footer-link:hover,
+.footer-link:active {
+  color: #e67e22;
+}
+.contacts {
+  font-size: 1.2rem;
+  line-height: 1.6;
+  color: #6f6f6f;
+}
+.contacts p:not(:last-child) {
+  margin-bottom: 1.2rem;
+}
+.social-links {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  margin-top: 2.4rem;
+  margin-bottom: 2.4rem;
+}
+.social-icon {
+  color: #b1b1b1;
+  font-size: 2.6rem;
+  margin-right: 1.6rem;
+  transition: all 0.3s ease-in-out;
+}
+.social-icon:hover {
+  color: #e67e22;
+}
+.copyright {
+  font-size: 1.2rem;
+  line-height: 1.6;
+  color: #6f6f6f;
+}
+.contacts a {
+  color: #e67e22;
+}
