--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  gap: 3.2rem;
+  gap: 4.8rem;
 }
 .main-nav-link:link,
 .main-nav-link:visited {
@@ -36,7 +36,7 @@
   background-color: #fdf2e9;
   padding: 4.8rem 0 10.6rem 0;
 }
-/* .hero {
+.hero {
   max-width: 130rem;
   margin-left: auto;
   margin-right: auto;
@@ -45,7 +45,7 @@
   grid-template-columns: repeat(2, 1fr);
   gap: 9.6rem;
   align-items: center;
-} */
+}
 
 .hero-description {
   font-size: 2rem;
@@ -243,6 +243,8 @@
   display: flex;
   align-items: center;
   gap: 1.6rem;
+  font-size: 1.8rem;
+  line-height: 1.2;
 }
 .list-item span {
   font-size: 1.6rem;
