--- a/css/general.css
+++ b/css/general.css
@@ -44,6 +44,7 @@ spacing system(px)
 }
 html {
   font-size: 62.5%;
+  overflow-x: hidden;
 }
 
 body {
@@ -51,6 +52,7 @@ body {
   line-height: 1;
   font-weight: 400;
   color: #555;
+  overflow-x: hidden;
 }
 /* general styles */
 .container {
