--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@
   align-items: center;
   justify-content: space-between;
   background-color: #fdf2e9;
-
+  position: relative;
   height: 9.6rem;
   padding: 0 4.8rem;
 }
@@ -30,7 +30,20 @@
 .main-nav-link:active {
   color: #cf711f;
 }
-
+.btn-mobile-nav {
+  border: none;
+  background: none;
+  cursor: pointer;
+  display: none;
+}
+.icon-mobile-nav {
+  height: 4.8rem;
+  width: 4.8rem;
+  color: #333;
+}
+.icon-mobile-nav[name='close-outline'] {
+  display: none;
+}
 /* hero section*/
 .section-hero {
   background-color: #fdf2e9;
